--- a/tasks/nvm.yml
+++ b/tasks/nvm.yml
@@ -95,7 +95,7 @@
   # https://news.ycombinator.com/item?id=12766049
   # https://sandstorm.io/news/2015-09-24-is-curl-bash-insecure-pgp-verified-install
   - name: Install NVM
-    shell: "{{ run_command }} https://raw.githubusercontent.com/creationix/nvm/v{{ nvm_version }}/install.sh | NVM_SOURCE={{ nvm_source }} NVM_DIR={{ nvm_dir }} PROFILE={{ nvm_profile }} {{ user_shell.alias }}"
+    shell: "{{ run_command }} https://raw.githubusercontent.com/nvm-sh/nvm/v{{ nvm_version }}/install.sh | NVM_SOURCE={{ nvm_source }} NVM_DIR={{ nvm_dir }} PROFILE={{ nvm_profile }} {{ user_shell.alias }}"
     args:
       warn: false
     register: nvm_result
@@ -133,7 +133,7 @@
     - name: Install via git
       git:
         dest: "{{ nvm_dir }}"
-        repo: 'https://github.com/creationix/nvm.git .nvm'
+        repo: 'https://github.com/nvm-sh/nvm.git .nvm'
         version: "{{ nvm_version }}"
       when: "'/git' in cmd.stdout"
 
