Fix broken git repo url

--- a/tasks/nvm.yml
+++ b/tasks/nvm.yml
@@ -133,7 +133,7 @@
     - name: Install via git
       git:
         dest: "{{ nvm_dir }}"
-        repo: 'https://github.com/nvm-sh/nvm.git .nvm'
+        repo: 'https://github.com/nvm-sh/nvm.git'
         version: "{{ nvm_version }}"
       when: "'/git' in cmd.stdout"
 
